[package]
name = "eddn"
description = "Elite: Dangerous Data Network (EDDN) subscriber"
version = "0.0.1-dev+alpha"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
license = "Beerware"
edition = "2018"

[dependencies]
elite_journal = { git = "https://github.com/ED-NEWP/elite_journal" }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
zmq = "0.9"
miniz_oxide = "0.4"
