[package]
name = "eddn"
description = "Elite: Dangerous Data Network (EDDN) subscriber"
version = "0.0.2"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
license = "Beerware"
edition = "2018"

[dependencies]
elite_journal = { path = "../elite_journal" }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
miniz_oxide = "0.4"

[target.'cfg(unix)'.dependencies]
zmq = "0.9"
